--- a/package.json
+++ b/package.json
@@ -7,12 +7,19 @@
     "dev:web": "cd packages/drivers/web && npm run dev",
     "build:web": "cd packages/drivers/web && npm run build",
     "start:web": "cd packages/drivers/web && npm run start",
-    "lint:web": "cd packages/drivers/web && npm run lint"
+    "lint:web": "cd packages/drivers/web && npm run lint",
+    "test:web": "cd packages/drivers/web && npm run test",
+    "coverage:web": "cd packages/drivers/web && npm run coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "babel-jest": "^29.3.1",
+    "jest": "^29.3.1",
+    "react-test-renderer": "^18.2.0",
     "typescript": "^4.9.4"
   },
   "workspaces": [
